Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    pass"
+    "    return 'madagascar'"
    ]
   },
   {
