Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,8 +225,7 @@
     "def capitalize_countries():\n",
     "    for place in travel_destinations:\n",
     "        place.upper()\n",
-    "        \n",
-    "        "
+    "    return "
    ]
   },
   {
