Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    for place in travel_destinations:\n",
     "        place.upper()\n",
-    "    return travel_destinations.up"
+    "    return travel_destinations.upper()"
    ]
   },
   {
