--- a/index.ipynb
+++ b/index.ipynb
@@ -224,8 +224,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for place in travel_destinations:\n",
-    "        place.upper()\n",
-    "    return travel_destinations.upper()"
+    "        place.upper()"
    ]
   },
   {
