--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capi\n",
+    "    capitalize_countries =[]\n",
     "    for place in travel_destinations:\n",
     "        place.upper()"
    ]
