Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for place in travel_destinations:\n",
-    "        capitalizeplace.upper()\n",
+    "        capitalize_countries.applace.upper()\n",
     "        "
    ]
   },
