--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for place in travel_destinations:\n",
-    "        capitalize_countries.applace.upper()\n",
+    "        capitalize_countries.append(place.upper())\n",
+    "    re\n",
     "        "
    ]
   },
