--- a/index.ipynb
+++ b/index.ipynb
@@ -225,16 +225,27 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for place in travel_destinations:\n",
-    "        capitalize_countries.append(place.upper())\n",
+    "        capitalize_countries.append(place[0].upper())\n",
     "    return capitalize_countries\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ARGENTINA', 'MEXICO', 'ITALY', 'FINLAND', 'CANADA', 'CROATIA']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
