--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for place in travel_destinations:\n",
-    "        capitalize_countries.append(place[0].upper() + '')\n",
+    "        capitalize_countries.append(place[0].upper() + place[]')\n",
     "    return capitalize_countries\n",
     "        "
    ]
