--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,23 +225,23 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for place in travel_destinations:\n",
-    "        capitalize_countries.append(place[0].upper() + place[]')\n",
+    "        capitalize_countries.append(place[0].upper() + place[1:])\n",
     "    return capitalize_countries\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A', 'M', 'I', 'F', 'C', 'C']"
+       "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
